<resources>
   <string name="scroll">Scroll</string>
   <string name="setting">Setting</string>
   <string name="filter">Filter</string>
   <string name="help">Help</string>
   <string name="save">Save</string>
   <string name="remove">Remove</string>
   <string name="add">Add</string>
   <string name="del">Delete</string>
   <string name="load">Load</string>
   <string name="exit">Return</string>
   <string name="clear">Clear</string>
   <string name="conn">Connect</string>
   <string name="log_to_file">Save File</string>
   <string name="control">Control</string>
   <string name="default_level">Default Log Level</string>
   <string name="search">Search</string>
   <string name="goto_line">Goto</string>
   <string name="start_to_save_log">Start to save logs</string>
   <string name="file_saved">File saved</string>
   <string name="twice_to_exit">Please click BACK again to exit</string>
   <string name="disconn_daemon">Disconnected from daemon</string>
   <string name="search_finish">Search Finished</string>
   <string name="input_filename">Input a filename</string>
   <string name="filter_save">Filter Saved</string>
   <string name="filter_load">Filter Loaded</string>
   <string name="menu">Menu</string>
   <string name="home">Home</string>
   <string name="help_view">The DLT Viewer for Android is an application that can receive messages from the DLT daemon with filter.</string>
   <string name="help_daemon">DLT, short for Diagnostic Log and Trace, provides a log and trace interface, based on the standardised protocol specified in the AUTOSAR standard 4.0 DLT. There is a famous implemention of DLT by GENIVI Alliance. This viewer is based on it.</string>
   <string name="help_home1">The save button at the top of the application used to save the logs shown on the screen.</string>
   <string name="help_home2">The save check-box at the bottom of the application used to save the dlt-format log into the download folder. The filter will not work for this function. Means all dlt logs received will be stored.</string>
   <string name="help_setting1">If enable the debug report, a trace log will be generated into the download folder when application crashed.</string>
   <string name="help_filter">User can add a group of filters. Users can save them in different files and reloaded them anytime.</string>
   <string name="help_control1">Users could set log level with this function.</string>
   <string name="help_control2">Users could send inject message.</string>
   <string name="help_control3">Users could use this function to jump to a given line on the home screen.</string>
   <string name="help_search">Users could use a keyword to search in the payload on the home screen. This keyword is not case sensitive. Long press a search result will jump to the position of the home screen.</string>
   <string name="dlt_viewer_for_android" translatable="false">DLT-Viewer for Android</string>
   <string name="home_url" translatable="false">https://github.com/zeerd/dlt-viewer-android</string>
    <string name="about">About</string>
   <string name="default_ip">Target</string>
   <string name="default_ecu">ECUID</string>
   <string name="debug_report">Debug Report</string>
    <string name="open">Open</string>
   <string name="version">Version</string>
   <string name="stop">Stop</string>
</resources>
