<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical" >
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:scrollbars="none"
    android:id="@+id/help_scroll"
    android:layout_weight="1">
      <TableLayout  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/log_table"
         android:stretchColumns="1*" >
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/dlt_viewer_for_android"
            android:textStyle="normal"
            />
        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_view"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_daemon"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_weight="1"
                android:background="#FF909090"
                android:padding="2dip" />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/home"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_home1"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_home2"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/setting"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_setting1"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/filter"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_filter"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/control"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_control1"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_control2"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_control3"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/search"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_search"
            android:textStyle="normal"
            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_weight="1"
                android:background="#FF909090"
                android:padding="2dip" />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="10dp"
              android:textSize="20sp"
              android:text="@string/about"
              android:textStyle="normal"
              />
        </TableRow>
        <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
          <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_url"
            android:textStyle="normal"
            />
        </TableRow>
      </TableLayout>
  </ScrollView>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/exit"
        android:onClick="returnHelp" />
  </LinearLayout>
</LinearLayout>
