<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical" >
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:id="@+id/log_scroll"
    android:layout_weight="1">
      <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
          <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
          <TextView
              android:text="@string/default_ip"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="10dp"
              android:textSize="20sp"
              android:textStyle="normal"/>
          <EditText
              android:id="@+id/default_target"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="10dp"
              android:textSize="16sp"
              android:text="192.168.42.210"
              />
          <Button
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@android:string/ok"
              android:onClick="setDefaultTarget"
              android:padding="10dp"
              android:textSize="20sp"
              android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
          <TextView
              android:text="@string/default_ecu"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="10dp"
              android:textSize="20sp"
              android:textStyle="normal"/>
          <EditText
              android:id="@+id/default_ecu"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="10dp"
              android:textSize="16sp"
              android:text="RECV"
              />
          <Button
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@android:string/ok"
              android:onClick="setDefaultEcu"
              android:padding="10dp"
              android:textSize="20sp"
              android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
          <TextView
              android:text="@string/debug_report"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:padding="10dp"
              android:textSize="20sp"
              android:textStyle="normal"/>
          <Switch
              android:id="@+id/debug_switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="20sp"
              />
        </LinearLayout>
      </LinearLayout>
  </ScrollView>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/exit"
        android:onClick="returnSetting" />
  </LinearLayout>
</LinearLayout>
